--- a/src/content/pages/reviews.html
+++ b/src/content/pages/reviews.html
@@ -16,19 +16,49 @@ eleventyNavigation:
 
 {% block body %}
 
-    <!-- ============================================ -->
-    <!--                    LANDING                   -->
-    <!-- ============================================ -->
+{% include 'components/banner.html' %}
 
-    <section id="int-hero">
-        <h1 id="home-h">Our Reviews</h1>
+<!-- ============================================ -->
+<!--                  Services                    -->
+<!-- ============================================ -->
+
+<section id="services-562">
+    <div class="cs-container">
+        <div class="cs-content-top">
+            <span class="cs-topper">Small Group Training</span>
+            <h2 class="cs-title">Spotlight <span class="cs-color">Services</span></h2>
+        </div>
         <picture class="cs-picture">
-            <source media="(max-width: 600px)" srcset="/assets/images/landing-m.webp">
-            <source media="(min-width: 601px)" srcset="/assets/images/landing.jpg">
-            <img aria-hidden="true" decoding="async" src="/assets/images/landing.jpg" alt="new home" width="2500" height="1667" loading="eager">
+            <!--Mobile Image-->
+            <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/computer-m.jpg">
+            <!--Tablet and above Image-->
+            <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/computer.jpg">
+            <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/computer.jpg" alt="computer" width="630" height="528" aria-hidden="true">
         </picture>
-    </section>
-
+        <div class="cs-content">
+            <h3 class="cs-h3">Process Engineering</h3>
+            <p class="cs-text">
+                Vitae ultricies leo integer malesuada nunc vel. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Viverra aliquet eget sit amet tellus cras adipiscing. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit
+            </p>
+            <ul class="cs-ul">
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow" width="16" height="18">
+                    Making Lives Easier
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow" width="16" height="18">
+                    Making Lives Easier
+                </li>
+                <li class="cs-li">
+                    <img class="cs-icon" aria-hidden="true" loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Services/arrow-green.svg" alt="arrow" width="16" height="18">
+                    Making Lives Easier
+                </li>
+            </ul>
+            <a href="" class="cs-button-solid">Contact Us</a>
+        </div>
+    </div>
+</section>
+                                
     <!-- ============================================ -->
     <!--                  Reviews                     -->
     <!-- ============================================ -->
